<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
		<modelVersion>4.0.0</modelVersion>
	<groupId>spaceraze</groupId>
	<artifactId>Server</artifactId>
	<packaging>war</packaging>
	<version>0.0.1-SNAPSHOT</version>
	<name>Server Maven Webapp</name>
	<url>http://maven.apache.org</url>
	<properties>
		<maven.compiler.target>13</maven.compiler.target>
		<maven.compiler.source>13</maven.compiler.source>
		<maven.complier.release>13</maven.complier.release>
    	<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    </properties>
    <repositories>
	    <repository>
	        <id>local-maven-repo</id>
	        <url>file:///${project.basedir}/../local-maven-repo</url>
	    </repository>
	</repositories>
	<dependencies>
		<dependency>
			<groupId>org.apache.tomcat</groupId>
			<artifactId>tomcat-catalina</artifactId>
			<version>9.0.31</version>
		</dependency>
		<dependency>
			<groupId>org.junit.jupiter</groupId>
			<artifactId>junit-jupiter-api</artifactId>
			<version>5.6.0</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>javax.servlet</groupId>
			<artifactId>javax.servlet-api</artifactId>
			<version>4.0.1</version>
		</dependency>
		<dependency>
			<groupId>com.fasterxml.jackson.core</groupId>
			<artifactId>jackson-annotations</artifactId>
			<version>2.10.3</version>
		</dependency>
		<dependency>
		    <groupId>org.glassfish.jersey.containers</groupId>
		    <artifactId>jersey-container-servlet</artifactId>
		    <version>2.30.1</version>
		</dependency>
		<dependency>
			<groupId>org.glassfish.jersey.inject</groupId>
			<artifactId>jersey-hk2</artifactId>
			<version>2.30.1</version>
		</dependency>
		<dependency>
		  <groupId>org.glassfish.jersey.media</groupId>
		  <artifactId>jersey-media-json-jackson</artifactId>
		  <version>2.30.1</version>
		</dependency>
		<dependency>
			<groupId>org.apache.maven.plugins</groupId>
			<artifactId>maven-war-plugin</artifactId>
			<version>3.2.3</version>
		</dependency>
	    <dependency>
		    <groupId>amarantin.imagepack</groupId>
		    <artifactId>amarantin-imagepack</artifactId>
		    <version>1.0</version>
		</dependency>
		<dependency>
			<groupId>spaceraze</groupId>
			<artifactId>utils</artifactId>
			<version>0.0.1-SNAPSHOT</version>
		</dependency>
		<dependency>
			<groupId>spaceraze</groupId>
			<artifactId>world</artifactId>
			<version>0.0.1-SNAPSHOT</version>
		</dependency>
		<dependency>
			<groupId>spaceraze</groupId>
			<artifactId>battlehandler</artifactId>
			<version>0.0.1-SNAPSHOT</version>
		</dependency>
		<dependency>
			<groupId>spaceraze</groupId>
			<artifactId>servlethelper</artifactId>
			<version>0.0.1-SNAPSHOT</version>
		</dependency>
	     
		<dependency>
			<groupId>org.json</groupId>
			<artifactId>json</artifactId>
			<version>20190722</version>
		</dependency>
	</dependencies>

	<build>
		<finalName>Server</finalName>
	</build>
</project>
